Changed cards class and implmented a strategy pattern,tests run, main runs
* Refactored Cards Classes
* Put fileheaders for exceptions
* Player move needs to be fixed