@@ -1,24 +1,69 @@
 /*
  * CSCI 234: Intro to Software Engineering
  * Group: Giovanny, Jamell, Matt, Deborah
- * Purpose: This class is used to draw a card from the community chest deck,
- * shuffle the deck, and restore the deck to its original state.
+ * Purpose: This class is responsible for creating the Community Chest card deck
+ * and preloading the cards
  * Team Member(s) responsible: Jamell
  * */
 
-
 package Model.Cards;
 
+import java.util.ArrayList;
 import java.util.Collections;
 
-public class CommunityChestCard extends CommunityChestDatabase {
+public class CommunityChestCard extends Card {
 
-    CommunityChestDatabase communityChestDeck;
+    private ArrayList<String> communityChanceDeck;
 
     public CommunityChestCard() {
+        super("Community Chest Card");
+        communityChanceDeck = new ArrayList<>();
+        preloadCards();
+    }
 
-        communityChestDeck = new CommunityChestDatabase();
-        shuffleDeck();
+    /**
+     * This method returns the card type
+     *
+     * @return CardType
+     * Team member(s) responsible: Jamell
+     */
+    @Override
+    public CardType getCardType() {
+        return CardType.Community_Chest;
+    }
+
+    /**
+     * This method returns the card deck
+     *
+     * @return ArrayList<String>
+     * Team member(s) responsible: Jamell
+     */
+    @Override
+    public ArrayList<String> getCardDeck() {
+        return communityChanceDeck;
+    }
+
+    /**
+     * This method preloads the cards
+     * Team member(s) responsible: Jamell
+     */
+    private void preloadCards() {
+        communityChanceDeck.add("Advance to Go (Collect $200)");
+        communityChanceDeck.add("Bank error in your favor. Collect $200");
+        communityChanceDeck.add("Doctor’s fee. Pay $50");
+        communityChanceDeck.add("From sale of stock you get $50");
+        communityChanceDeck.add("Get Out of Jail Free");
+        communityChanceDeck.add("Go to Jail. Go directly to jail, do not pass Go, do not collect $200");
+        communityChanceDeck.add("Holiday fund matures. Receive $100");
+        communityChanceDeck.add("Income tax refund. Collect $20");
+        communityChanceDeck.add("It is your birthday. Collect $10 from every player");
+        communityChanceDeck.add("Life insurance matures. Collect $100");
+        communityChanceDeck.add("Pay hospital fees of $100");
+        communityChanceDeck.add("Pay school fees of $50");
+        communityChanceDeck.add("Receive $25 consultancy fee");
+        communityChanceDeck.add("You are assessed for street repair. $40 per house. $115 per hotel");
+        communityChanceDeck.add("You have won second prize in a beauty contest. Collect $10");
+        communityChanceDeck.add("You inherit $100");
     }
 
     /**
@@ -28,8 +73,8 @@ public class CommunityChestCard extends CommunityChestDatabase {
      * Team member(s) responsible: Jamell
      */
     public String drawCard() {
-        if (!communityChestDeck.getCardDeck().isEmpty()) {
-            return communityChestDeck.getCardDeck().remove(0);
+        if (!communityChanceDeck.isEmpty()) {
+            return communityChanceDeck.removeFirst();
         }
         return "No more cards in the deck.";
     }
@@ -39,7 +84,7 @@ public class CommunityChestCard extends CommunityChestDatabase {
      * Team member(s) responsible: Jamell
      */
     public void shuffleDeck() {
-        Collections.shuffle(communityChestDeck.getCardDeck());
+        Collections.shuffle(communityChanceDeck);
     }
 
     /**
@@ -47,10 +92,14 @@ public class CommunityChestCard extends CommunityChestDatabase {
      * Team member(s) responsible: Jamell
      */
     public void cardRestore() {
-        communityChestDeck = new CommunityChestDatabase();
+        preloadCards();
         shuffleDeck();
     }
 
+    /**
+     * This method is used to use a card. It is not implemented yet.
+     * Team member(s) responsible: Jamell
+     */
     public void useCard(String message){
         // for use cards that have a specific action
     }
